# Graduation-thesis

./: README.md
app/: build.gradle
app/src/androidTest/java/com/example/gr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ED.cpp  ED.h  EDColor.cpp  EDColor.h  EDLib.h  EDLines.cpp  EDLines.h  NFA.cpp  classify.cpp  classify.h  line_n_point.cpp  line_n_point.h  native-lib.cpp  native-lib.h  process_line.cpp  process_line.h
app/src/main/java/com/example/gr/: App.java  ChatHead.java  DemoCameraActivity.java  DemoVideoActivity.java  ForegroundService.java  ImageProcessingActivity.java  MainActivity.java  Rotate3dAnimation.java  RotationVectorSensor.java  ScreenOnOffReceiver.java  SkewButton.java  UxActivity.java
app/src/main/res/drawable/: ic_android_circle.xml  ic_android_circle_red.xml  ic_close.xml
app/src/main/res/layout/: activity_demo_camera.xml  activity_demo_video.xml  activity_image_processing.xml  activity_main.xml  activity_ux.xml  layout_chat_head.xml  layout_overlay.xml
app/src/main/res/values/: attrs_chat_head.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary343/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
